# ofxSample

./: .gitignore  CMakeLists.txt  README.md  ofxSampleConfig.h.in
.github/workflows/: cmake-linux-platform.yml  cmake-mac-platform.yml  cmake-multi-platform.yml  cmake-windows-platform.yml
OpenFX-1.4/include/: ofxCore.h  ofxDialog.h  ofxImageEffect.h  ofxInteract.h  ofxKeySyms.h  ofxMemory.h  ofxMessage.h  ofxMultiThread.h  ofxOld.h  ofxOpenGLRender.h  ofxParam.h  ofxParametricParam.h  ofxPixels.h  ofxProgress.h  ofxProperty.h  ofxTimeLine.h
Support/include/: ofxsCore.h  ofxsImageEffect.h  ofxsInteract.h  ofxsMemory.h  ofxsParam.h  ofxsSupportPrivate.h
ofxSample.ofx.bundle/Contents/: Info.plist
ofxSample.ofx.bundle/Contents/Win64/: ofxSample.ofx
openclExample/: GainPlugin.cpp
openglExample/: CMakeLists.txt  opengl.cpp
src/: basic.cpp
src/bmdBroken/: GainPlugin.cpp
